@@ -496,43 +496,51 @@ function mergeRules( $rule, $ruleToMerge, $method )
     {
         $rule->services->merge($ruleToMerge->services);
         $rule->tags->merge($ruleToMerge->tags);
+        $rule->description_merge( $ruleToMerge );
     }
     elseif( $method == 2)
     {
         $rule->apps->merge($ruleToMerge->apps);
         $rule->tags->merge($ruleToMerge->tags);
+        $rule->description_merge( $ruleToMerge );
     }
     elseif( $method == 3)
     {
         $rule->destination->merge($ruleToMerge->destination);
         $rule->tags->merge($ruleToMerge->tags);
+        $rule->description_merge( $ruleToMerge );
     }
     elseif( $method == 4)
     {
         $rule->source->merge($ruleToMerge->source);
         $rule->tags->merge($ruleToMerge->tags);
+        $rule->description_merge( $ruleToMerge );
     }
     elseif( $method == 5)
     {
         $rule->to->merge($ruleToMerge->to);
         $rule->tags->merge($ruleToMerge->tags);
+        $rule->description_merge( $ruleToMerge );
     }
     elseif( $method == 6)
     {
         $rule->from->merge($ruleToMerge->from);
         $rule->tags->merge($ruleToMerge->tags);
+        $rule->description_merge( $ruleToMerge );
     }
     elseif( $method == 7)
     {
         $rule->from->merge($ruleToMerge->from);
         $rule->source->merge($ruleToMerge->source);
         $rule->tags->merge($ruleToMerge->tags);
+        $rule->description_merge( $ruleToMerge );
     }
     elseif( $method == 8)
     {
         $rule->to->merge($ruleToMerge->to);
         $rule->destination->merge($ruleToMerge->destination);
         $rule->tags->merge($ruleToMerge->tags);
+        $rule->description_merge( $ruleToMerge );
     }
     elseif( $method == 9)
     {
